--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "faiss-cpu>=1.12.0",
+    "chromadb>=1.0.20",
     "langchain>=0.3.27",
-    "pypdf>=6.0.0",
+    "langchain-community>=0.3.27",
+    "langchain-core>=0.3.74",
+    "langchain-google-genai>=2.0.10",
+    "pdfplumber>=0.11.7",
+    "pypdf2>=3.0.1",
+    "python-dotenv>=1.1.1",
 ]
