--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "chromadb>=1.0.20",
+    "gradio>=5.43.1",
     "langchain>=0.3.27",
+    "langchain-chroma>=0.2.5",
     "langchain-community>=0.3.27",
     "langchain-core>=0.3.74",
     "langchain-google-genai>=2.0.10",
